Reworked gradle, guis and configs