@@ -2,45 +2,65 @@ package com.kryeit.stuff;
 
 import com.kryeit.stuff.command.*;
 import com.kryeit.stuff.compat.BluemapImpl;
+import com.kryeit.stuff.config.ConfigReader;
+import com.kryeit.stuff.config.StaticConfig;
 import com.kryeit.stuff.listener.DragonDeath;
 import com.kryeit.stuff.listener.PlayerDeath;
 import com.kryeit.stuff.listener.PlayerVote;
 import com.kryeit.stuff.storage.Database;
 import com.kryeit.stuff.storage.DragonKillers;
 import com.kryeit.stuff.storage.MapVisibilityStorage;
+import com.kryeit.stuff.ui.GuiTextures;
+import com.kryeit.stuff.ui.UiResourceCreator;
 import com.kryeit.votifier.model.VotifierEvent;
 import com.mojang.logging.LogUtils;
 import com.simibubi.create.content.fluids.transfer.FluidManipulationBehaviour;
 import com.simibubi.create.infrastructure.config.AllConfigs;
+import eu.pb4.polymer.resourcepack.api.PolymerResourcePackUtils;
 import net.fabricmc.api.DedicatedServerModInitializer;
 import net.fabricmc.fabric.api.command.v2.CommandRegistrationCallback;
 import net.fabricmc.fabric.api.entity.event.v1.ServerLivingEntityEvents;
 import net.fabricmc.fabric.api.event.lifecycle.v1.ServerLifecycleEvents;
+import net.fabricmc.loader.api.FabricLoader;
 import org.slf4j.Logger;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.HashMap;
+import java.nio.file.Path;
 import java.util.UUID;
 
 public class Stuff implements DedicatedServerModInitializer {
+    public static final String MODID = "stuff";
     private static final Logger LOGGER = LogUtils.getLogger();
     // public static Queue queue = new Queue();
     public static MapVisibilityStorage hiddenPlayers;
     public static DragonKillers dragonKillers = new DragonKillers();
 
+    public static final boolean DEV = FabricLoader.getInstance().isDevelopmentEnvironment();
+    @SuppressWarnings("PointlessBooleanExpression")
+    public static final boolean DYNAMIC_ASSETS = true && DEV;
+
     @Override
     public void onInitializeServer() {
         try {
-            Files.createDirectories(Paths.get("mods/stuff"));
-            hiddenPlayers = new MapVisibilityStorage("mods/stuff/hiddenPlayers");
+            ConfigReader.readFile(Path.of("config/stuff"));
+            hiddenPlayers = new MapVisibilityStorage("config/stuff/hiddenPlayers");
         } catch (IOException e) {
             LOGGER.error("Failed to load map visibility storage", e);
         }
 
         registerEvents();
         registerCommands();
+
+        setupPatbox();
+    }
+
+    private void setupPatbox() {
+        UiResourceCreator.setup();
+        GuiTextures.register();
+
+        // Resource pack
+        PolymerResourcePackUtils.addModAssets(MODID);
+        PolymerResourcePackUtils.markAsRequired();
     }
 
     public void registerEvents() {
@@ -55,6 +75,7 @@ public class Stuff implements DedicatedServerModInitializer {
 
         ServerLifecycleEvents.SERVER_STOPPING.register(server -> {
             server.getPlayerManager().getPlayerList().forEach(player -> {
+                if (!StaticConfig.production) return;
                 Analytics.storeSessionEnd(player.getUuid());
             });
 
